--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,38 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: url('../public/bg.png'),rgb(var(--brandPeach1-rgb,255,230,201));
+  background-blend-mode: soft-light; */
+  background-color: #f6f6f6;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.outline-none {
+  outline: none;
+}
+
+.input {
+  border: none;
+  background-color: #e8e8e8;
+  width: 95%;
+  font-size:1.25rem;
+  font-weight: bold;
+  transition: all ease-in-out .2s;
+}
+
+.input:focus {
+  border-left: 4px solid #199b39 !important;
+}
+
+select {
+  font-weight: 700 !important;
+  font-size: 1.25rem !important;
+}
+
+select option {
+  font-size: 1rem;
 }
