--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,8 @@
 }
 
 .page-heading{
-  margin-top: 1rem;
-  margin-left: 1rem;
+  margin-top: .5rem;
+  margin-left: .5rem;
   position: sticky;
   top: 1rem;
   font-size: 2.25rem;
