--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   margin-top: .5rem;
   margin-left: .5rem;
   position: sticky;
-  top: 1rem;
+  top: 0;
   font-size: 2.25rem;
   font-weight: 700;
   background: #f6f6f6;
