--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400;500&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 html {
   scroll-behavior: smooth;
@@ -6,14 +10,16 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Libre Franklin', 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background: url('../public/bg.png'),rgb(var(--brandPeach1-rgb,255,230,201));
   background-blend-mode: soft-light; */
-  background-color: #f6f6f6;
+  background-color: #f9fafb;
+  margin-bottom: 50px;
+  overflow-x: hidden;
 }
 
 code {
@@ -29,7 +35,7 @@ code {
   border: none;
   background-color: #e8e8e8;
   width: 95%;
-  font-size:1.25rem;
+  font-size:1rem;
   font-weight: bold;
   transition: all ease-in-out .1s;
 }
@@ -40,7 +46,7 @@ code {
 
 select {
   font-weight: 700 !important;
-  font-size: 1.25rem !important;
+  font-size: 1rem !important;
 }
 
 select option {
